WEEK-12 Minor Improvements

--- a/src/web/game.html
+++ b/src/web/game.html
@@ -17,6 +17,7 @@
                 </div>
                 <div id="detailsContainer">
                     <div id="tetrisNextPiece"></div>
+                    <div id="tetrisLevel"></div>
                     <div id="tetrisScore"></div>
                     <div>
                         <h3>Leaderboard</h3>
